--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.1",
+    "react-native-paper": "^5.10.5",
     "react-native-reanimated": "^3.5.2",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-screens": "^3.4.0",
     "react-native-svg": "^13.13.0",
     "react-native-tab-view": "^3.5.2"
   },
