--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-easing-gradient": "^1.1.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^9.0.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.5",
     "react-native-reanimated": "^3.5.2",
