--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-easing-gradient": "^1.1.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^9.0.0",
@@ -33,7 +35,8 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^13.13.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
