--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^13.13.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-track-player": "^3.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
