--- a/package.json
+++ b/package.json
@@ -15,28 +15,31 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-easing-gradient": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^9.0.0",
-    "react-native-reanimated": "^3.5.2",
+    "react-native-pager-view": "^6.2.1",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^13.13.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.5.2",
-    "react-native-track-player": "^3.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
