--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.4.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.13.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.5.2",
