--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-svg": "^13.13.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.5.2",
+    "react-native-text-ticker": "^1.14.0",
+    "react-native-ytdl": "^4.8.3",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
